--- a/index.html
+++ b/index.html
@@ -76,17 +76,38 @@
 		</div>
 	</nav>
 
+	<!--<nav id="colorlib-main-nav" role="navigation">
+		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+		<div class="js-fullheight colorlib-table">
+		  <div class="img" style="background-image: url(images/bg_3.jpg);"></div>
+		  <div class="colorlib-table-cell js-fullheight">
+			<div class="row no-gutters">
+			  <div class="col-md-12 text-center">
+				<h1 class="mb-4"><a href="index.html" class="logo">Nusa Dinamika Solusindo</a></h1>
+				<ul>
+				  <li class="active"><a href="index.html"><span>Home</span></a></li>
+				  <li><a href="about.html"><span>About</span></a></li>
+				  <li><a href="blog.html"><span>Blog</span></a></li>
+				  <li><a href="contact.html"><span>Contact</span></a></li>
+				</ul>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </nav> -->
+
+
 	<div class="hero-2 overlay" style="background-image: url('images/Hero.jpg');">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-5">
 					<h1 class="mb-5"><span>Quality</span> <span class="d-block">is the priority </span> <span class="d-block">of what we do in our business throughout the process</span></h1>
 
-					<!--<div class="play-vid">
+					<div class="play-vid">
 						<a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="play glightbox">
 							<span class="icon-play"></span>
 						</a>
-					</div> -->
+					</div>
 
 					<div class="intro-desc">
 						<div class="line"></div>
@@ -102,8 +123,8 @@
 		<div class="container">
 			<div class="row g-0">
 				<div class="col-lg-3">
-					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE, AND EXPERIENCE COMES FROM BAD DECISIONS IN A CONTROLLED ENVIRONTMENT</h2>
-					<p>The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area. From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia</p>
+					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
+					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
 					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
 				</div>
@@ -116,7 +137,14 @@
 
 	<div class="section sec-4">
 		<div class="container">
-			
+			<div class="row mb-5">
+				<div class="col-lg-6">
+					<h2 class="heading">Services</h2>
+				</div>
+				<div class="col-lg-4">
+					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+				</div>
+			</div>
 			<div class="row g-5">
 				<div class="col-lg-4">
 
@@ -768,6 +796,8 @@
 		</div>
 	</div>
 
+	<!-- jQuery -->
+	<script src="plugins/jQuery/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="plugins/slick/slick.min.js"></script>
 	<script src="js/tiny-slider.js"></script>
@@ -776,6 +806,10 @@
 	<script src="js/navbar.js"></script>
 	<script src="js/counter.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/client.js"></script>
+	<script src="js/popper.js"></script>
+	<script src="js/burgermenu.js"></script>
+
 	
 </body>
 </html>
