adding scrolling feature

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/glightbox.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/project.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	
+	
 
 	 
 
@@ -353,6 +357,7 @@
 			</div>
 		</div>
 	</div>
+	
 
 
 	<div class="section sec-5">
@@ -479,169 +484,68 @@
   <!-- /clients -->
 
 
-
-	<div class="sec-4 section bg-light">
-
-		<div class="text-center mb-5">
-			<h2 class="heading mb-5 text-center">Testimonial</h2>
-		</div>
-		<div class="testimonial-slide-center-wrap" data-aos="fade-up" data-aos-delay="100">
-
-			<div id="testimonial-nav">
-				<span class="prev" data-controls="prev"><span class="icon-chevron-left"></span></span>
-
-				<span class="next" data-controls="next"><span class="icon-chevron-right"></span></span>
-			</div>
-
-			<div class="testimonial-slide-center testimonial-center" id="testimonial-center">
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_2.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_1.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_3.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_4.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_5.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_2.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_3.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_4.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="item">
-					<div class="testimonial-item">
-						<div  class="testimonial-item-inner">
-							<div class="testimonial-author mb-5">
-								<img src="images/person_1.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
-							</div>
-							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
-							</blockquote>
-
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
+  <section class="ftco-section ftco-no-pb ftco-no-pt" id="chapter-section">
+	<div class="container">
+		<div class="row justify-content-center py-5 mt-5">
+	  <div class="col-md-12 heading-section text-center ftco-animate">
+		<h2 class="mb-4">What's Inside The Book</h2>
+	  </div>
 	</div>
+		<div class="row">
+			<div class="col-md-3 mb-4">
+				<nav id="navi">
+					<ul>
+					  <li><a href="#page-1">Title page</a></li>
+					  <li><a href="#page-2">Copyright</a></li>
+					  <li><a href="#page-3">Table of contents</a></li>
+					  <li><a href="#page-4">Dedication</a></li>
+					  <li><a href="#page-5">Foreword</a></li>
+					  <li><a href="#page-6">Prologue</a></li>
+					  <li><a href="#page-7">Epilogue</a></li>
+					  <li><a href="#page-8">Epigraph</a></li>
+					</ul>
+				  </nav>
+				</div>
+				<div class="col-md-9">
+				  <div id="page-1" class= "page bg-light one">
+					  <h2 class="heading">Title Page</h2>
+					  <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-2" class= "page bg-light two">
+					  <h2 class="heading">Copyright</h2>
+					  <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-3" class= "page bg-light three">
+					  <h2 class="heading">Table of Contents</h2>
+					  <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-4" class= "page bg-light four">
+					<h2 class="heading">Dedication</h2>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-5" class= "page bg-light five">
+					<h2 class="heading">Foreword</h2>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-6" class= "page bg-light six">
+					<h2 class="heading">Prologue</h2>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-7" class= "page bg-light seven">
+					<h2 class="heading">Epilogue</h2>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				  <div id="page-8" class= "page bg-light eight">
+					<h2 class="heading">Epigraph</h2>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+				  </div>
+				</div>
+		  </div>
+	</div>
+</section>
+
+
+  
 
 
 	<div class="section sec-news">
@@ -777,7 +681,7 @@
 
 			<div class="row justify-content-center text-center copyright">
 				<div class="col-md-8">
-					<p class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a></br>Distributed By <a href="https://themewagon.com/">Themewagon</a> <!-- License information: https://untree.co/license/ -->
+					<p class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; by Nusa Dinamika Solusindo
 					</p>
 				</div>
 			</div>
@@ -786,7 +690,15 @@
 
 
 	
+	<div class="social-icons">
+		<div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0 position-fixed">
+			<a class="btn m-3" href="#!"><i class="icon-whatsapp"></i></a>
+			<a class="btn m-3" href="#!"><i class="icon-facebook"></i></a>
+			<a class="btn m-3" href="#!"><i class="icon-instagram"></i></a>
+			<a class="btn m-3" href="#!"><i class="icon-linkedin"></i></a>
 
+		</div>
+	</div>
 
 	<!-- Preloader -->
 	<div id="overlayer"></div>
@@ -798,6 +710,13 @@
 
 	<!-- jQuery -->
 	<script src="plugins/jQuery/jquery.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.animateNumber.min.js"></script>
+
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="plugins/slick/slick.min.js"></script>
 	<script src="js/tiny-slider.js"></script>
@@ -809,6 +728,12 @@
 	<script src="js/client.js"></script>
 	<script src="js/popper.js"></script>
 	<script src="js/burgermenu.js"></script>
+	<script src="js/project.js"></script>
+
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/scrollax.min.js"></script>
+	
+
 
 	
 </body>
