--- a/index.html
+++ b/index.html
@@ -242,122 +242,9 @@
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="section sec-2">
-		<div class="container">
-			<div class="row g-0">
-				<div class="col-lg-6 mb-4 mb-lg-0">
-					<img src="images/img_4.jpg" alt="IMage" class="img-fluid">
-				</div>
-				<div class="col-lg-3 ms-auto">
-					<h2 class="heading">Modern Architecture</h2>
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.</p>
-					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	
-
-	<div class="sec-3 section bg-light">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3">
-					<h2 class="heading">Services</h2>
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.</p>
-				</div>
-
-				<div class="col-lg-6 ms-auto">
-					<div class="accordion accordion-flush accordion-1" id="accordionFlushExample">
-						<div class="accordion-item">
-							<h2 class="accordion-header" id="flush-headingOne">
-								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
-									Interior Design
-								</button>
-							</h2>
-							<div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-								<div class="accordion-body">
-									<div class="row justify-content-between">
-										<div class="col-md-4">
-											<img src="images/img_7.jpg" alt="Image" class="img-fluid">
-										</div>
-										<div class="col-md-8">
-											<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio.</p>
-											<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-										</div>
-									</div>
-									
-								</div>
-							</div>
-						</div>
-						<div class="accordion-item">
-							<h2 class="accordion-header" id="flush-headingTwo">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-									Landscape Design
-								</button>
-							</h2>
-							<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-								<div class="accordion-body">
-									<div class="row justify-content-between">
-										<div class="col-md-4">
-											<img src="images/img_2.jpg" alt="Image" class="img-fluid">
-										</div>
-										<div class="col-md-8">
-											<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio.</p>
-											<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="accordion-item">
-							<h2 class="accordion-header" id="flush-headingThree">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-									Engineering Plan
-								</button>
-							</h2>
-							<div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-								<div class="accordion-body">
-									<div class="row justify-content-between">
-										<div class="col-md-4">
-											<img src="images/img_3.jpg" alt="Image" class="img-fluid">
-										</div>
-										<div class="col-md-8">
-											<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio.</p>
-											<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="accordion-item">
-							<h2 class="accordion-header" id="flush-headingFour">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-									Architecture Design
-								</button>
-							</h2>
-							<div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-								<div class="accordion-body">
-									<div class="row justify-content-between">
-										<div class="col-md-4">
-											<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-										</div>
-										<div class="col-md-8">
-											<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio.</p>
-											<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	
 
 
@@ -649,10 +536,10 @@
   <!-- /clients -->
 
 
-  <div class="section ftco-section ftco-no-pb goto-here resume-section" id="resume-section">
+  <div class="section ftco-section ftco-no-pb goto-here resume-section my-5">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-2 col-12">
 				<div id="navside" class="navside">
 					<ul>
 					  <li><a href="#page-1">Education</a></li>
@@ -662,7 +549,7 @@
 					</ul>
 				</div>
 				</div>
-				<div class="col-md-9">
+				<div class="col-md-10 col-12">
 				  <div id="page-1" class= "page one">
 					  <h2 class="heading">Education</h2>
 					<div class="resume-wrap d-flex ftco-animate">
@@ -1072,6 +959,18 @@
 
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="http://iprodev.github.io/Scrollax.js/lib/scrollax.min.js"></script>
+
+	<script>
+		let parent = document.querySelector('.navside').parentElement;
+
+	while (parent) {
+    const hasOverflow = getComputedStyle(parent).overflow;
+    if (hasOverflow !== 'visible') {
+        console.log(hasOverflow, parent);
+    }
+    parent = parent.parentElement;
+}
+	</script>
 	
 
 
