--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/project.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/animate.css">
 	
 	
 
@@ -127,14 +126,14 @@
 	<div class="section sec-1">
 		<div class="container">
 			<div class="row g-0">
-				<div class="col-lg-3">
+				<div class="col-lg-4">
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
 					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
 				</div>
 				<div class="col-lg-7 ms-auto">
-					<img src="images/img_8.jpg" alt="Image" class="img-fluid img-r">
+					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r">
 				</div>
 			</div>
 		</div>
@@ -532,20 +531,31 @@
   <!-- /clients -->
 
 
-  <div class="section resume-section my-5">
-	<div class="container">
+  <section class="resume-section">
+	<div class="container py-5">
 		<div class="row">
-			<div class="col-md-3 col-12">
-				<div id="navside" class="navside">
+		<div class=" resume-flex">
+			<div class="col-md-3 left">
+				<!--<div id="navside" class="navside">
 					<ul>
-					  <li><a href="#page-1">Soil Investigation</a></li>
+					  <li><a class="current" href="#page-1">Soil Investigation</a></li>
 					  <li><a href="#page-2">Engineering design & Consultancy</a></li>
 					  <li><a href="#page-3">Survey Mapping</a></li>
 					  <li><a href="#page-4">Geophysical and Geological Survey</a></li>
 					</ul>
-				</div>
+				</div> -->
+
+				<nav id="navi">
+					<ul>
+					  <li><a class="current" href="#page-1">Soil Investigation</a></li>
+					  <li><a href="#page-2">Engineering design & Consultancy</a></li>
+					  <li><a href="#page-3">Survey Mapping</a></li>
+					  <li><a href="#page-4">Geophysical and Geological Survey</a></li>
+					</ul>
+				  </nav>
+			
 			</div>
-				<div class="col-md-9 col-12">
+				<div class="col-md-9 right">
 				
 					<div id="page-1" class= "page one">
 								<h2 class="heading">Soil Investigation</h2>
@@ -803,8 +813,9 @@
 	
 				</div>
 		  </div>
-	</div>
-</div>
+		</div>
+		</div>
+	</section>
 
 
   
@@ -1079,10 +1090,10 @@
 	
 	<div class="social-icons">
 		<div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0 position-fixed">
-			<a class="btn m-3" href="#!"><i class="icon-whatsapp"></i></a>
-			<a class="btn m-3" href="#!"><i class="icon-facebook"></i></a>
-			<a class="btn m-3" href="#!"><i class="icon-instagram"></i></a>
-			<a class="btn m-3" href="#!"><i class="icon-linkedin"></i></a>
+			<a class="btn m-3" target="_blank" href="https://api.whatsapp.com/send?phone=6281323322008"><i class="icon-whatsapp"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.facebook.com/NusaDinamikaSolusindo"><i class="icon-facebook"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.instagram.com/ndsengineering/"><i class="icon-instagram"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.linkedin.com/company/nusa-dinamika-solusindo/"><i class="icon-linkedin"></i></a>
 
 		</div>
 	</div>
