--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/project.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/animate.css">
 	
 	
 
@@ -531,7 +532,7 @@
   <!-- /clients -->
 
 
-  <section class="resume-section">
+  <section class="resume-section ftco-section ftco-no-pb goto-here">
 	<div class="container py-5">
 		<div class="row">
 		<div class=" resume-flex">
@@ -547,7 +548,7 @@
 
 				<nav id="navi">
 					<ul>
-					  <li><a class="current" href="#page-1">Soil Investigation</a></li>
+					  <li><a href="#page-1">Soil Investigation</a></li>
 					  <li><a href="#page-2">Engineering design & Consultancy</a></li>
 					  <li><a href="#page-3">Survey Mapping</a></li>
 					  <li><a href="#page-4">Geophysical and Geological Survey</a></li>
