--- a/index.html
+++ b/index.html
@@ -244,18 +244,18 @@
 	</div>
 </div>
 
-	<div class="section sec-5">
+	<div class="section sec-5 galery">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-lg-6">
-					<h2 class="heading">Projects</h2>
+					<h2 class="heading">Galery</h2>
 				</div>
 				<div class="col-lg-4">
 					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
 				</div>
 			</div>
 
-			<div class="row g-4">
+			<div class="row g-4" data-aos="zoom-in-up" data-aos-delay="500">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 					<div class="single-portfolio">
 						<a href="project-single.html">
@@ -532,8 +532,16 @@
   <!-- /clients -->
 
 
-  <section class="resume-section ftco-section ftco-no-pb goto-here">
+  <div class="section resume-section ftco-section ftco-no-pb goto-here">
 	<div class="container py-5">
+		<div class="row mb-5">
+			<div class="col-lg-6">
+				<h2 class="heading">OUR PROJECT</h2>
+			</div>
+			<div class="col-lg-4">
+				<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+			</div>
+		</div>
 		<div class="row">
 		<div class=" resume-flex">
 			<div class="col-md-3 left">
@@ -816,7 +824,7 @@
 		  </div>
 		</div>
 		</div>
-	</section>
+	</div>
 
 
   
