--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 						<a href="project-single.html">
 							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
@@ -1009,7 +1009,7 @@
 				</div>
 				
 			</div>
-			<div class="row g-5">
+			<div class="row g-5 team-slider">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
 					<div class="person">
 						<img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mx-auto w-50 mb-3">
