--- a/index.html
+++ b/index.html
@@ -123,6 +123,42 @@
 		</div>
 	</div>
 
+		<!-- clients -->
+
+		<div class="section client">
+			<div class="container">
+			  <div class="client-logo-slider align-self-center">
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-1.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-2.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-4.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-5.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-6.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-7.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-8.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-9.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-10.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-11.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-12.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-13.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-14.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-15.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-16.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-17.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-18.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-19.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-20.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-21.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-22.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-23.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-24.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-25.png" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-26.png" alt="client-logo"></a>
+				</div>
+			</div>
+		</div>
+		  <!-- /clients -->
+		
+
 
 	<div class="section sec-1">
 		<div class="container">
@@ -254,11 +290,22 @@
 					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
 				</div>
 			</div>
+			<div class="row" data-aos="fade-up" data-aos-delay="100">
+				<div class="col-lg-12 d-flex justify-content-center">
+				  <ul id="portfolio-flters">
+					<li data-filter="*" class="filter-active">All</li>
+					<li data-filter=".filter-basic">Basic</li>
+					<li data-filter=".filter-animal">For Animal</li>
+					<li data-filter=".filter-plant">For Plant</li>
+					<li data-filter=".filter-brush">Brushes</li>
+				  </ul>
+				</div>
+			  </div>
 
-			<div class="row g-4">
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
-					<div class="single-portfolio">
-						<a href="project-single.html">
+			<div class="row g-4 portfolio-container">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+					<div class="single-portfolio portfolio-wrap">
+						<a>
 							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
 								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
@@ -267,8 +314,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="800">
-					<div class="single-portfolio">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal" data-aos="fade-up" data-aos-delay="800">
+					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
@@ -278,8 +325,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
-					<div class="single-portfolio">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush" data-aos="fade-up" data-aos-delay="500">
+					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
@@ -290,8 +337,8 @@
 					</div>
 				</div>
 
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
-					<div class="single-portfolio">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
@@ -301,8 +348,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="800">
-					<div class="single-portfolio">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="800">
+					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
@@ -312,8 +359,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
-					<div class="single-portfolio">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
@@ -352,11 +399,13 @@
 						<div  class="testimonial-item-inner">
 							<div class="testimonial-author mb-5">
 								<img src="images/person_2.jpg" alt="Image" class="img-fluid">
-								<strong class="d-block">James Campbell</strong>
-								<span>CEO, Co-Founder</span>
+								<strong class="d-block">Muqwin Hakimy Syahza</strong>
+								<span>Operation Manager, Indulexco</span>
 							</div>
 							<blockquote>
-								Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.
+								I have worked with NDS on several projects, including topographic survey and soil investigation at Soekarno Hatta and Juanda Airport. I have been consistently pleased with their professionalism, creativity, technical expertise, and thorough knowledge of relevant planning, engineering codes and standard. <br>
+								<br>Without exception, on each and every occasion, we have been greeted with professionalism and courtesy, accompanied by a level of service that has been second to none. I would have no qualms about recommending NDS to other potential clients. Many thanks to the whole team, keep up the good work.
+
 							</blockquote>
 
 						</div>
@@ -495,41 +544,6 @@
 		</div>
 	</div>
 
-
-	<!-- clients -->
-
-	<div class="section client">
-	<div class="container">
-	  <div class="client-logo-slider align-self-center">
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-1.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-2.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-4.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-5.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-6.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-7.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-8.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-9.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-10.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-11.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-12.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-13.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-14.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-15.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-16.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-17.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-18.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-19.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-20.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-21.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-22.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-23.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-24.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-25.png" alt="client-logo"></a>
-			<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-26.png" alt="client-logo"></a>
-		</div>
-	</div>
-</div>
-  <!-- /clients -->
 
 
   <div class="section resume-section ftco-section ftco-no-pb goto-here" id="resume-section">
@@ -1246,6 +1260,7 @@
 	<script src="js/popper.js"></script>
 	<script src="js/burgermenu.js"></script>
 	<script src="js/project.js"></script>
+	<script src="plugins/isotope-layout/isotope.pkgd.min.js"></script>
 
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="http://iprodev.github.io/Scrollax.js/lib/scrollax.min.js"></script>
