--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	</div>
 </div>
 
-	<div class="section sec-5 galery">
+	<div class="section sec-5 galery portfolio" id="portfolio">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-lg-6">
@@ -302,8 +302,10 @@
 				</div>
 			  </div>
 
-			<div class="row g-4 portfolio-container">
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+			  
+
+			<div class="row g-4 portfolio-container" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a>
 							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
@@ -314,7 +316,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal" data-aos="fade-up" data-aos-delay="800">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
@@ -325,7 +327,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
@@ -337,7 +339,7 @@
 					</div>
 				</div>
 
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
@@ -348,7 +350,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="800">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
@@ -359,7 +361,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
 							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
@@ -948,7 +950,7 @@
 		</div>
 		</div>
 	</div>
-
+</div>
 
   
 
@@ -1145,7 +1147,7 @@
 	</div>
 	
 
-	<div class="site-footer bg-light">
+	<div class="site-footer">
 		<div class="container">
 
 			<div class="row justify-content-between">
